# api/validator.go
@@ -1,0 +1,13 @@
+package api
+
+import "context"
+
+func (s *server) GetValidatorSummary(ctx context.Context, request GetValidatorSummaryRequestObject) (GetValidatorSummaryResponseObject, error) {
+	//TODO implement me
+	panic("implement me")
+}
+
+func (s *server) SetValidator(ctx context.Context, request SetValidatorRequestObject) (SetValidatorResponseObject, error) {
+	//TODO implement me
+	panic("implement me")
+}
