# pkg/registry/validator/options.go
@@ -1,6 +1,0 @@
-package validator
-
-type options struct {
-}
-
-type Option func(*options)
