# pkg/validator/base/validator.go
@@ -1,7 +1,15 @@
 package base
 
-import "context"
+import (
+	"context"
+
+	"vdb/pkg/common"
+)
+
+type Factory interface {
+	Build(ctx context.Context, value common.ValidatorData) (Validator, error)
+}
 
 type Validator interface {
-	Validate(ctx context.Context, value map[string]any) error
+	Validate(ctx context.Context, value common.CollectionValue) error
 }
